--- a/repositoryofjewels/pom.xml
+++ b/repositoryofjewels/pom.xml
@@ -55,6 +55,12 @@
     <version>4.3.4.RELEASE</version>
 </dependency>
 
+ <dependency>
+ <groupId>com</groupId>
+  <artifactId>rojbackend</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  </dependency>
+
   </dependencies>
   <build>
     <finalName>repositoryofjewels</finalName>
